# ob-poc

./: # CBU DSL Document-Directed CRUD – Full.md  .dockerignore  .gitignore  00_impact_scan.rb  10_apply_remediation.rb  15_delete_verbs.rb  20_verify_remediation.rb  AGENTIC_CRUD_CONTINUATION_SUMMARY.md  AGENTIC_CRUD_DATABASE_INTEGRATION_PLAN.md  AGENTIC_CRUD_STATUS_SUMMARY.md  AGENTIC_DSL_CRUD_IMPLEMENTATION_PLAN.md  AGENTIC_DSL_PLAN.md  AGENTIC_SCENARIO_HARNESS_TODO.md  AGENTS.md  AGENT_INTEGRATION_ARCHITECTURE.md  AGENT_LOOP_CLEANUP_TODO.md  AGENT_REPL_CLEANUP_REVIEW_29a263c.md  AI_INTEGRATION_SUMMARY.md  ALLIANZ-DATA-ACQUISITION.md  API_SETUP.md  ARCH-PROPOSAL-entity-lineage-and-semantic-scope.md  ARCHITECTURE_FOR_LLM_REVIEW.md  ATTRIBUTE_DICTIONARY_COMPLETE.md  AUDIT-CURRENT-STRUCTURES.md  Adam-to-review.md  BNY_OBPOC_Sell_Sheet_Agentic_DSL.md  BUSINESS_REQUEST_LIFECYCLE_COMPLETED.md  CBU_AGENTIC_IMPLEMENTATION_COMPLETE.md  CBU_CRUD_DSL_SPECIFICATION.md  CBU_END_TO_END_ANALYSIS.md  CLAUDE-CODE-PROMPT-PHASE-5A.md  CLAUDE-MD-CORRECTIONS.md  CLAUDE-TODO-AGENT-CONTEXT-AND-VISUALIZATION.md  CLAUDE-TODO-AUTO-ONBOARD.md  CLAUDE-TODO-JOURNEY-UI-ENHANCEMENTS.md  CLAUDE.md  CLAUDE.md.bak2  CLAUDE_CORRECTIONS.md  CLEAN_CODEBASE_PROGRESS.md  CLIENT-USER-MANUAL.md  (+318 more)
bpmn-lite/: .dockerignore  .env.example  .gitignore  CLAUDE-CODE-PROMPT-PHASE-B.md  CLAUDE-CODE-PROMPT-PHASE-C.md  CLAUDE-CODE-PROMPT-PHASE-D.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dmn-lite  Dockerfile.grpc-target  IMPL-PHASE-B-VERB-CONTRACTS.md  IMPL-PHASE-C-BPMN-EXPORT.md  IMPL-PHASE-D-CLI-PUBLISH.md  README.md  docker-compose.yml
bpmn-lite/.cargo/: config.toml.example
bpmn-lite/bpmn-lite-analysis/: Cargo.toml
bpmn-lite/bpmn-lite-authoring/: Cargo.toml
bpmn-lite/bpmn-lite-bus-handler/: Cargo.toml
bpmn-lite/bpmn-lite-compiler/: Cargo.toml
bpmn-lite/bpmn-lite-core/: Cargo.toml  schema.sql
bpmn-lite/bpmn-lite-engine/: Cargo.toml
bpmn-lite/bpmn-lite-ffi-grpc/: Cargo.toml  build.rs
bpmn-lite/bpmn-lite-ffi-http/: Cargo.toml
bpmn-lite/bpmn-lite-server/: Cargo.toml  build.rs
bpmn-lite/bpmn-lite-store/: Cargo.toml
bpmn-lite/bpmn-lite-store-postgres/: Cargo.toml
bpmn-lite/bpmn-lite-types/: Cargo.toml
bpmn-lite/bpmn-lite-vm/: Cargo.toml
bpmn-lite/dmn-lite-analysis/: Cargo.toml
bpmn-lite/dmn-lite-bridge/: Cargo.toml
bpmn-lite/dmn-lite-bus-handler/: Cargo.toml
bpmn-lite/dmn-lite-compiler/: Cargo.toml
bpmn-lite/dmn-lite-decisions/: cbu_type_routing.dmn-lite  manifest-allowlist.yaml
bpmn-lite/dmn-lite-engine/: Cargo.toml
bpmn-lite/dmn-lite-manifest-export/: Cargo.toml
bpmn-lite/dmn-lite-parser/: Cargo.toml
bpmn-lite/dmn-lite-server/: Cargo.toml
bpmn-lite/dmn-lite-types/: Cargo.toml
bpmn-lite/docs/: bpmn-subset.md  runtime-invariants.md
bpmn-lite/dsl-bus-client/: Cargo.toml
bpmn-lite/dsl-bus-protocol/: Cargo.toml  build.rs
bpmn-lite/dsl-bus-server/: Cargo.toml
bpmn-lite/dsl-bus-storage/: Cargo.toml
bpmn-lite/dsl-manifest/: Cargo.toml
bpmn-lite/ffi-catalogue/: Cargo.toml
bpmn-lite/ffi-dispatcher/: Cargo.toml
bpmn-lite/ffi-types/: Cargo.toml
bpmn-lite/manifests/: dmn-lite-v1.0.0.yaml  ob-poc-v1.0.0.yaml
bpmn-lite/scripts/: reset-demo.sh
bpmn-lite/test-data/: sem-os-stub.toml
bpmn-lite/xtask/: Cargo.toml
dsl_types/: Cargo.toml  Cargo.toml.bak2
dsl_types/src/: lib.rs
eval/: Cargo.toml  README.md
eval/ob-poc-eval/: Cargo.toml
eval/ob-poc-eval-fixtures/: Cargo.toml
eval/ob-poc-eval-runner/: Cargo.toml
eval/ob-poc-eval-schema/: Cargo.toml
eval/ob-poc-eval-scorer/: Cargo.toml
observatory-wasm/: Cargo.toml  index.html
observatory-wasm/src/: actions.rs  app.rs  fetch.rs  lib.rs  state.rs
rust/: .dockerignore  ATTRIBUTE_DICTIONARY_CRITIQUE.md  ATTRIBUTE_SERVICE_QUICK_START.md  Attribute Dictionary Refactoring Plan  CLEAN_ARCHITECTURE.md  CLIPPY_SUMMARY.md  COMPLETE_TAXONOMY_IMPLEMENTATION.md  Cargo.toml  DSL v3.0 Refactoring Plan for AI AgentOb  Dockerfile  INTEGRATION_SUMMARY.md  KYC_DSL_Transition_Plan.md  NO_MOCKS_VERIFICATION.md  PHASE1_README.md  PHASE2_README.md  PHASE3_README.md  PHASE_1_3_DB_INTEGRATION_STATUS.md  PHASE_1_3_INTEGRATION_COMPLETE.md  PHASE_3_5_COMPLETION_REPORT.md  PHASE_3_5_QUICK_STATUS.md  PRE_EXISTING_ERRORS_FIXED.md  TEST_CLEANUP_SUMMARY.md  TODO-CBU-CONTAINER-LAYOUT.md  TODO-CBU-RESOURCE-PIPELINE.md  TODO-ENTITY-RESOLUTION-CONSOLIDATED.md  TODO-ESPER-VIEWPORT-NAVIGATION.md  TODO-ESPER-VISUAL-WIRING.md  TODO-FIX-3.5-UNIFY-RESOLUTION.md  TODO-PHASE1-CBU-FLOW.md  TODO-PHASE1-FIX-DISAMBIGUATION.md  TODO-PHASE2-CONTROL-ANCHORS.md  TODO-PHASE3-POLISH-MATRIX.md  TODO-PHASE4-CAMERA-LOD.md  TODO-PHASE5-AUTOFIT-AGGREGATION.md  TODO-PHASE6-SESSION-REFACTOR.md  TODO-PHASE7-VIEWPORT-SCALING.md  TODO-PRODUCT-TAXONOMY-VISUALIZATION.md  TODO-SERVICE-RESOURCE-WIRING.md  audit-edn-consistency.sh  bacon.toml  (+25 more)
rust/.cargo/: config.docker.toml  config.toml
rust/.sqlx/: query-005a0b3c57830a34fa9a30c21f0d6a8b2787f508d12112f75be9436c87be29f4.json  query-009ef3780718607785a6d8dbe963d9f4ae1f88cb156d77cd192b55796a703138.json  query-01083cb74994494e5da3165fe3dc131535870ae975cf5a25791dc539906f7f3c.json  query-0161a084992c82c7b150b57c50e41615d377d64f44b49f34c8bced1ac26d28ab.json  query-02ec3dc0e462fdc5486da1fe11fefc872ac4245907a37167a971b41db0e3591b.json  query-0351c8753f617922fa90b742b6c4b9355c2fe6a8398d0072fe1d941a37c075e5.json  query-038b27dd780808cbfd5fcfaa09482b602cb2b1d2f2d8bf3dd3dbbfc89f85278e.json  query-039b35f3352db037aa8f6f81b623bdcbfc9e01bc1c142498a0d55a7f5d2002d1.json  query-043ecc7d21167e6230252a7384e1076d4507cf7e789212f5037edbb5dca619a7.json  query-0515faa271b75b32212f8bd155c36d0d5493c538ab0c07ebc025c3dcdcb3ff80.json  query-0529955685cdb7d31b6004f239198ff1ae637aec299ab36505784db942ed1726.json  query-05bd52e1eab6a269c663dceeac495e9d48dd367117e98944d7a850c1674d51ff.json  query-05f60366142dc270fd07db67a8d472eafc24aff87221c81ce3fcf523bf3c9a21.json  query-060d9d9c4d47e33bd8712d24696c4927f4d310ef23a32701bb2cafd92c2d69cb.json  query-068fdba67ae2ca62bbd8605429870b4bf11aa7f081bfe65546084d2995da70db.json  (+734 more)
web-server/: Cargo.toml
(+6074 files in other folders)
