[workspace]
resolver = "2"

members = [
    "rust",           # Main application crate
    "dsl_types",      # Pure DSL data structures (Level 1)
]

# Workspace-wide dependencies for version consistency
[workspace.dependencies]
# Core libraries
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Parser libraries
nom = "7.1"

# Database (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# HTTP clients
reqwest = { version = "0.11", features = ["json"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Development dependencies
bacon = "2.14"

[workspace.lints.rust]
# Enforce clean architecture
unused_imports = "deny"
dead_code = "deny"
unused_variables = "deny"

[workspace.lints.clippy]
# Prevent architectural drift
wildcard_imports = "deny"
