[package]
name = "dsl_types"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
description = "Pure DSL data structures - Level 1 foundation types with zero dependencies"

# CRITICAL: Level 1 crate - MUST have ZERO dependencies except std
# This crate provides pure data structures that all other crates depend on
# Adding any dependencies here creates circular dependency risk

[dependencies]
# Core serialization - required for data interchange
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling - required for DslError enum
thiserror = "1.0"

# NO OTHER DEPENDENCIES ALLOWED
# This crate must be the foundation that everything else builds on

[features]
# Empty feature to satisfy rust-analyzer workspace-wide feature activation
# This crate has no database code, but rust-analyzer enables "database" globally
database = []
