[workspace]
resolver = "3"
members = [
    "ob-poc-eval",
    "ob-poc-eval-schema",
    "ob-poc-eval-runner",
    "ob-poc-eval-scorer",
    "ob-poc-eval-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
