[package]
name = "ob-poc"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# All deprecated binaries removed - agentic CRUD examples are the master

# All deprecated examples removed - only working examples remain

[dependencies]
# Workspace crates
dsl-core = { path = "crates/dsl-core" }
inspector-projection = { path = "crates/inspector-projection" }
ob-agentic = { path = "crates/ob-agentic", features = ["gateway"] }
ob-semantic-matcher = { path = "crates/ob-semantic-matcher" }
ob-templates = { path = "crates/ob-templates" }
ob-workflow = { path = "crates/ob-workflow", features = ["database"] }
dsl_types = { path = "../dsl_types" }
entity-gateway = { path = "crates/entity-gateway", optional = true }
ob-poc-types = { path = "crates/ob-poc-types" }
ob-poc-macros = { path = "crates/ob-poc-macros" }

# Auto-registration for custom operations
inventory = "0.3"

# Core libraries
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }

rust_decimal = { version = "1.33", features = ["serde"] } # Re-enabled for entity models
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
url = "2.5"

# DSL parsing and processing
nom = "7.1"

# Database integration (optional for Phase 1)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "bigdecimal", "rust_decimal"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

# gRPC client for EntityGateway + BPMN-Lite
tonic = "0.12"
prost = "0.13"



# Async runtime and utilities
tokio = { version = "1", features = ["full"] }

# HTTP client for external integrations
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# REST API framework (optional for server)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], optional = true }

# Testing utilities (used in lib code for generation tests)
tempfile = "3.0"

regex = "1.12.2"
rand = "0.8"

# Fuzzy matching for smart suggestions (Jaro-Winkler, Levenshtein, etc.)
strsim = "0.11"

# Trie for ESPER command phrase lookup
radix_trie = "0.2"

# Template rendering for research macros
handlebars = "6.0"

# JSON Schema validation for research macro output validation
jsonschema = "0.29"

# For attribute API endpoints
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }
atty = { version = "0.2", optional = true }
futures = "0.3"
dotenvy = "0.15"
rustyline = { version = "12.0", optional = true }

# Event infrastructure (lock-free channels)
crossbeam-channel = "0.5"

# Serialization/Deserialization
# serde is already included above
bincode = "1.3"

# Unicode normalization for entity matching
unicode-normalization = "0.1"

# Small vector optimization for bounded collections
smallvec = { version = "1.11", features = ["serde"] }

# WebAssembly support (if needed for client-side)
# wasm-bindgen = "0.2"

# For graph visualization (Phase 3)
# petgraph = "0.6"

# Testing
[dev-dependencies]

[build-dependencies]
tonic-build = "0.12"

# Build compute-heavy crates in release mode even during debug builds
# This dramatically speeds up Candle embeddings (from 20+ min to ~10s)
[profile.dev.package.candle-core]
opt-level = 3

[profile.dev.package.candle-nn]
opt-level = 3

[profile.dev.package.candle-transformers]
opt-level = 3

[profile.dev.package.half]
opt-level = 3

[profile.dev.package.gemm]
opt-level = 3

[profile.dev.package.gemm-common]
opt-level = 3

[profile.dev.package.gemm-f16]
opt-level = 3

[profile.dev.package.gemm-f32]
opt-level = 3

[profile.dev.package.gemm-f64]
opt-level = 3

[profile.dev.package.gemm-c32]
opt-level = 3

[profile.dev.package.gemm-c64]
opt-level = 3

[profile.dev.package.tokenizers]
opt-level = 3

[profile.dev.package.hf-hub]
opt-level = 3

# Also optimize the semantic matcher crate itself
[profile.dev.package.ob-semantic-matcher]
opt-level = 3

# Binary configuration
[[bin]]
name = "dsl_cli"
path = "src/bin/dsl_cli.rs"
required-features = ["cli"]

[[bin]]
name = "dsl_mcp"
path = "src/bin/dsl_mcp.rs"
required-features = ["mcp"]

[[bin]]
name = "dsl_api"
path = "src/bin/dsl_api.rs"
required-features = ["server"]

[[bin]]
name = "batch_test_harness"
path = "src/bin/batch_test_harness.rs"
required-features = ["database", "cli"]

# Features for conditional compilation
[features]
default = ["server"]  # Enable for sqlx prepare; use --no-default-features to disable

database = ["dep:sqlx", "dep:bigdecimal", "dep:entity-gateway", "dep:pgvector"]  # Only enable database functionality when needed
server = ["database", "mcp", "dep:axum", "dep:tower", "dep:tower-http"]  # REST API server with intent pipeline
cli = ["dep:clap", "dep:colored", "dep:atty", "dep:rustyline"]  # CLI tool for DSL testing
mcp = ["database"]  # MCP/intent pipeline for semantic verb search
vnext-repl = ["database"]  # Pack-guided REPL v2 (Journey Packs, sentence templates, unified runbook)



# Optional: Workspace configuration if you have multiple crates
# [workspace]
# members = [
#     "proto", # Assuming your proto files are in a 'proto' directory
# ]

[workspace]
members = [
    ".",
    "crates/dsl-core",
    "crates/ob-agentic",
    "crates/ob-execution-types",
    "crates/ob-templates",
    "crates/ob-workflow",
    "crates/dsl-lsp",
    "crates/ob-poc-graph",
    "crates/ob-poc-web",
    "crates/ob-poc-types",
    "crates/entity-gateway",
    "crates/ob-semantic-matcher",
    "crates/viewport",
    "crates/ob-poc-macros",
    "crates/esper_snapshot",
    "crates/esper_core",
    "crates/esper_input",
    "crates/esper_compiler",
    "crates/esper_policy",
    "xtask", "crates/playbook-core", "crates/playbook-lower",
    "crates/inspector-projection",
]
