[package]
name = "ob-poc"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# All deprecated binaries removed - agentic CRUD examples are the master

# All deprecated examples removed - only working examples remain

[dependencies]
# Workspace crates
dsl-core = { path = "crates/dsl-core" }
inspector-projection = { path = "crates/inspector-projection" }
ob-agentic = { path = "crates/ob-agentic", features = ["gateway"] }
ob-semantic-matcher = { path = "crates/ob-semantic-matcher" }
ob-templates = { path = "crates/ob-templates" }
ob-workflow = { path = "crates/ob-workflow", features = ["database"] }
entity-gateway = { path = "crates/entity-gateway", optional = true }
ob-poc-types = { path = "crates/ob-poc-types" }
ob-poc-diagnostics = { path = "crates/ob-poc-diagnostics" }
ob-poc-boundary = { path = "crates/ob-poc-boundary" }
# Phase 1 capability crates (see docs/todo/capability-crate-restructure-v1.md).
# Empty skeletons populated by Phases 2–5.
ob-poc-sage = { path = "crates/ob-poc-sage" }           # Sage intent understanding (Phase 2 dest)
ob-poc-journey = { path = "crates/ob-poc-journey" }     # Pack-guided workflows (Phase 3 dest)
ob-poc-domain = { path = "crates/ob-poc-domain" }       # Business-domain DTOs (Phase 4 dest)
ob-poc-authoring = { path = "crates/ob-poc-authoring" } # Editor toolkit (Phase 5 dest)
ob-poc-macros = { path = "crates/ob-poc-macros" }
sem_os_core = { path = "crates/sem_os_core" }
sem_os_types = { path = "crates/sem_os_types" }
sem_os_ontology = { path = "crates/sem_os_ontology" }
sem_os_policy = { path = "crates/sem_os_policy" }
sem_os_client = { path = "crates/sem_os_client" }
sem_os_obpoc_adapter = { path = "crates/sem_os_obpoc_adapter" }
sem_os_postgres = { path = "crates/sem_os_postgres" }
dsl-runtime = { path = "crates/dsl-runtime" }
# dsl-runtime-split v1 Phase 11 (2026-05-14): ob-poc reaches the
# analyser-tier directly through dsl_v2 re-exports + entity_kind callers
# in mcp/verb_search, sage/verb_resolve, service_resources/discovery.
dsl-analysis = { path = "crates/dsl-analysis" }

# Core libraries
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "v5", "serde"] }

rust_decimal = { version = "1.33", features = ["serde"] } # Re-enabled for entity models
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
url = "2.5"

# DSL parsing and processing
nom = "7.1"

# Database integration (optional for Phase 1)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "bigdecimal", "rust_decimal"], optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }
pgvector = { version = "0.4", features = ["sqlx"], optional = true }

# gRPC client for EntityGateway + BPMN-Lite
tonic = "0.12"
prost = "0.13"



# Async runtime and utilities
tokio = { version = "1", features = ["full"] }

# HTTP client for external integrations
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# REST API framework (optional for server)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], optional = true }

# Testing utilities (used in lib code for generation tests)
tempfile = "3.0"

regex = "1.12.2"
rand = "0.8"

# Fuzzy matching for smart suggestions (Jaro-Winkler, Levenshtein, etc.)
strsim = "0.11"

# Template rendering for research macros
handlebars = "6.0"

# JSON Schema validation for research macro output validation
jsonschema = "0.29"

# For attribute API endpoints
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
# Phase F.1 (2026-04-22): BLAKE3 used for outbox idempotency-key hashing
# in the bpmn_lite_ops refactor. Already a transitive dep via
# ob-poc-types; direct listing here keeps the usage site explicit.
blake3 = "1"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"], optional = true }
colored = { version = "2.1", optional = true }
atty = { version = "0.2", optional = true }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenvy = "0.15"
rustyline = { version = "12.0", optional = true }

# Event infrastructure (lock-free channels)
crossbeam-channel = "0.5"

# Serialization/Deserialization
# serde is already included above
bincode = "1.3"

# Unicode normalization for entity matching
unicode-normalization = "0.1"

# Small vector optimization for bounded collections
smallvec = { version = "1.11", features = ["serde"] }

# WebAssembly support (if needed for client-side)
# wasm-bindgen = "0.2"

# For graph visualization (Phase 3)
# petgraph = "0.6"

# Testing
[dev-dependencies]
# bpmn-lite-core retired in bpmn-lite Phase 2.8 (3344bb57) — split into
# bpmn-lite-{types, compiler, store, store-postgres, vm, authoring, engine}.
# Only the ob-poc bpmn integration test needs the engine + memory store.
bpmn-lite-engine = { path = "../bpmn-lite/bpmn-lite-engine" }
bpmn-lite-store = { path = "../bpmn-lite/bpmn-lite-store" }
bpmn-lite-server = { path = "../bpmn-lite/bpmn-lite-server" }
sem_os_core = { path = "crates/sem_os_core" }
sem_os_ontology = { path = "crates/sem_os_ontology" }
sem_os_policy = { path = "crates/sem_os_policy" }
tokio-stream = "0.1"
proptest = "1.4"
toml = "0.8"

[build-dependencies]
tonic-build = "0.12"

# Build compute-heavy crates in release mode even during debug builds
# This dramatically speeds up Candle embeddings (from 20+ min to ~10s)
[profile.dev.package.candle-core]
opt-level = 3

[profile.dev.package.candle-nn]
opt-level = 3

[profile.dev.package.candle-transformers]
opt-level = 3

[profile.dev.package.half]
opt-level = 3

[profile.dev.package.gemm]
opt-level = 3

[profile.dev.package.gemm-common]
opt-level = 3

[profile.dev.package.gemm-f16]
opt-level = 3

[profile.dev.package.gemm-f32]
opt-level = 3

[profile.dev.package.gemm-f64]
opt-level = 3

[profile.dev.package.gemm-c32]
opt-level = 3

[profile.dev.package.gemm-c64]
opt-level = 3

[profile.dev.package.tokenizers]
opt-level = 3

[profile.dev.package.hf-hub]
opt-level = 3

# Also optimize the semantic matcher crate itself
[profile.dev.package.ob-semantic-matcher]
opt-level = 3

# Binary configuration
[[bin]]
name = "dsl_cli"
path = "src/bin/dsl_cli.rs"
required-features = ["cli"]

[[bin]]
name = "dsl_mcp"
path = "src/bin/dsl_mcp.rs"
required-features = ["mcp"]

# Phase 2.4 (2026-05-13): `ob_poc_acp` binary relocated to the new
# `ob-poc-agent` crate as `bin/sage-acp`. Build the relocated binary
# with `cargo build -p ob-poc-agent --bin sage-acp`.

# Slice 4.1 (2026-04-22): `dsl_api` binary retired per user decision Q2(a).
# `ob-poc-web` is now the sole authoritative HTTP server for all production
# traffic. `Dockerfile.api` was deleted alongside this binary — downstream
# deployments should build `ob-poc-web` instead.

[[bin]]
name = "batch_test_harness"
path = "src/bin/batch_test_harness.rs"
required-features = ["database", "cli"]

[[bin]]
name = "sem_os_footprint_audit"
path = "src/bin/sem_os_footprint_audit.rs"

# Features for conditional compilation
[features]
default = ["server"]  # Enable for sqlx prepare; use --no-default-features to disable

database = ["dep:sqlx", "dep:bigdecimal", "dep:entity-gateway", "dep:pgvector", "ob-poc-diagnostics/database", "ob-poc-boundary/database", "ob-poc-sage/database", "ob-poc-domain/database", "ob-poc-authoring/database"]  # Only enable database functionality when needed
server = ["database", "mcp", "dep:axum", "dep:tower", "dep:tower-http"]  # REST API server with intent pipeline
cli = ["dep:clap", "dep:colored", "dep:atty", "dep:rustyline"]  # CLI tool for DSL testing
mcp = ["database"]  # MCP/intent pipeline for semantic verb search
# Slice 4.2 (2026-04-22): `vnext-repl` feature removed. REPL V2 is always enabled.
# The feature existed as an alias for `database` during the V1→V2 migration and
# was deprecated on 2026-03-22; no remaining cfg-gate depended on it post-cleanup.
# Slice 4.1-d (2026-04-22): `runbook-gate-vnext` feature removed. After dsl_api
# retirement there was one consumer (ob-poc-web) and one code path (the always-on
# gated dispatch); the feature was absorbed into default. All #[cfg(feature =
# "runbook-gate-vnext")] attribute sites in agent_service.rs were stripped —
# the code compiles unconditionally.
write-set-contract = []  # Enables contract-driven write_set derivation from verb YAML metadata (INV-8)



# Optional: Workspace configuration if you have multiple crates
# [workspace]
# members = [
#     "proto", # Assuming your proto files are in a 'proto' directory
# ]

[workspace]
members = [
    ".",
    "crates/dsl-core",
    "crates/ob-agentic",
    "crates/ob-templates",
    "crates/ob-workflow",
    "crates/dsl-lsp",

    "crates/ob-poc-web",
    "crates/ob-poc-types",
    "crates/ob-poc-diagnostics",
    "crates/ob-poc-boundary",
    "crates/ob-poc-sage",
    "crates/ob-poc-journey",
    "crates/ob-poc-domain",
    "crates/ob-poc-authoring",
    "crates/ob-poc-agent",
    "crates/entity-gateway",
    "crates/ob-semantic-matcher",

    "crates/ob-poc-macros",

    "xtask", "crates/playbook-core",
    "crates/inspector-projection",

    # Semantic OS crates (Stage 1.1)
    "crates/sem_os_core",

    # sem_os_core split v1 (docs/todo/sem-os-core-split-v1.md) —
    # types (bottom tier) + ontology + policy planes
    "crates/sem_os_types",
    "crates/sem_os_ontology",
    "crates/sem_os_policy",
    "crates/sem_os_postgres",
    "crates/sem_os_server",
    "crates/sem_os_client",
    "crates/sem_os_obpoc_adapter",
    "crates/sem_os_harness",
    "crates/sem_os_mcp",

    # Three-plane refactor — dsl-runtime (Phase 1 onwards)
    "crates/dsl-runtime",

    # dsl-runtime split v1 (docs/todo/dsl-runtime-split-v1.md) — analyser plane
    "crates/dsl-analysis",
]
